Main class and loglevels